Integrate Supabase dependencies and update layout with authentication button. Added Supabase configuration to .env.local, included @supabase/ssr and @supabase/supabase-js in package.json, and enhanced the layout with a new header featuring an AuthButton for user authentication.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "@mlightcad/libredwg-web": "^0.2.3",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.74.0",
     "@tarikjabiri/dxf": "^2.8.9",
     "@xyflow/react": "^12.8.5",
     "dxf-writer": "^1.18.4",
