--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/node": "22.7.5",
     "@types/react": "18.3.11",
     "autoprefixer": "^10.4.20",
+    "eslint": "^9.37.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
     "typescript": "5.6.3"
