--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
     "reactflow": "^11.11.4"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.37.0",
     "@types/node": "22.7.5",
     "@types/react": "18.3.11",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.37.0",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^15.5.4",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
     "typescript": "5.6.3"
