--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
     "@supabase/supabase-js": "^2.74.0",
     "@tarikjabiri/dxf": "^2.8.9",
     "@xyflow/react": "^12.8.5",
-    "dxf-writer": "^1.18.4",
     "lucide-react": "^0.544.0",
     "next": "^14.2.15",
     "next-themes": "^0.3.0",
-    "openai": "^5.22.0",
+    "openai": "^5.23.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "reactflow": "^11.11.4"
+    "reactflow": "^11.11.4",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
