--- a/package.json
+++ b/package.json
@@ -6,16 +6,22 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cad:worker": "tsx workers/rocketWorker.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.676.0",
+    "@aws-sdk/s3-request-presigner": "^3.676.0",
     "@mlightcad/libredwg-web": "^0.2.3",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.74.0",
     "@tarikjabiri/dxf": "^2.8.9",
     "@xyflow/react": "^12.8.5",
+    "bullmq": "^5.21.3",
+    "dxf-writer": "^1.18.4",
+    "ioredis": "^5.4.1",
     "lucide-react": "^0.544.0",
     "next": "^14.2.15",
     "next-themes": "^0.3.0",
@@ -24,7 +30,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "reactflow": "^11.11.4",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "zod-to-json-schema": "^3.23.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
@@ -36,6 +43,8 @@
     "eslint-config-next": "^15.5.4",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
     "typescript": "5.6.3"
   }
 }
